[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
